--- a/css/style.css
+++ b/css/style.css
@@ -73,14 +73,14 @@ a {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
   .btn.btn-primary {
-    background: #6EC1E4;
-    border-color: #6EC1E4;
+    background: #489FB5;
+    border-color: #489FB5;
 		color: #fff; 
 	}
 	.btn.btn-primary:hover {
 		background: #fff;
 		border-color: #fff;
-		color: #6EC1E4; 
+		color: #489FB5; 
 	}
 	.btn.btn-primary.btn-black--hover:hover {
 		background: #666666;
@@ -103,12 +103,12 @@ a {
 	}
 
 	.btn.btn-contact {
-		border: solid 1px #6EC1E4;
+		border: solid 1px #489FB5;
 		padding: 10px 25px !important;
 	}
 	.btn.btn-contact:hover {
-		background: #6EC1E4;
-		border-color: #6EC1E4;
+		background: #489FB5;
+		border-color: #489FB5;
 		color: #fff; 
 	}
 
@@ -124,7 +124,7 @@ a {
 	/* font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";  */
 }
   .form-control:active, .form-control:focus {
-    border-color: #6EC1E4; }
+    border-color: #489FB5; }
   .form-control:hover, .form-control:active, .form-control:focus {
     -webkit-box-shadow: none !important;
     box-shadow: none !important; }
@@ -278,7 +278,7 @@ a {
   .ul-check.success li:before {
     color: #8bc34a; }
   .ul-check.primary li:before {
-		color: #6EC1E4; }
+		color: #489FB5; }
 	.ul-check.accent li:before {
 			color: #FFA62B; }
 
@@ -315,7 +315,7 @@ a {
   .site-navbar .site-navigation .site-menu {
     margin-bottom: 0; }
     .site-navbar .site-navigation .site-menu .active {
-      color: #6EC1E4;
+      color: #489FB5;
       display: inline-block;
       padding: 5px 20px; }
     .site-navbar .site-navigation .site-menu a {
@@ -329,7 +329,7 @@ a {
         display: inline-block;
         text-decoration: none !important; }
         .site-navbar .site-navigation .site-menu > li > a:hover {
-          color: #6EC1E4; }
+          color: #489FB5; }
     .site-navbar .site-navigation .site-menu .has-children {
       position: relative; }
       .site-navbar .site-navigation .site-menu .has-children > a {
@@ -351,7 +351,7 @@ a {
         top: 100%;
         position: absolute;
         text-align: left;
-        border-top: 2px solid #6EC1E4;
+        border-top: 2px solid #489FB5;
         -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
         border-left: 1px solid #edf0f5;
@@ -388,7 +388,7 @@ a {
           transition: 0s all;
           color: #343a40; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-          color: #6EC1E4 !important; }
+          color: #489FB5 !important; }
         .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
           list-style: none;
           padding: 0;
@@ -410,7 +410,7 @@ a {
             background: #f4f5f9;
             color: #25262a; }
       .site-navbar .site-navigation .site-menu .has-children:hover > a, .site-navbar .site-navigation .site-menu .has-children:focus > a, .site-navbar .site-navigation .site-menu .has-children:active > a {
-        color: #6EC1E4; }
+        color: #489FB5; }
       .site-navbar .site-navigation .site-menu .has-children:hover, .site-navbar .site-navigation .site-menu .has-children:focus, .site-navbar .site-navigation .site-menu .has-children:active {
         cursor: pointer; }
         .site-navbar .site-navigation .site-menu .has-children:hover > .dropdown, .site-navbar .site-navigation .site-menu .has-children:focus > .dropdown, .site-navbar .site-navigation .site-menu .has-children:active > .dropdown {
@@ -490,12 +490,12 @@ a {
       position: relative;
       color: #212529; }
       .site-mobile-menu .site-nav-wrap a:hover {
-        color: #6EC1E4; }
+        color: #489FB5; }
     .site-mobile-menu .site-nav-wrap li {
       position: relative;
       display: block; }
       .site-mobile-menu .site-nav-wrap li .active {
-        color: #6EC1E4; }
+        color: #489FB5; }
     .site-mobile-menu .site-nav-wrap .arrow-collapse {
       position: absolute;
       right: 0px;
@@ -590,7 +590,7 @@ a {
 		box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.2); 
 	}
 	.sticky-wrapper.is-sticky .site-navbar .site-logo a {
-		color: #6EC1E4; 
+		color: #489FB5; 
 	}
 	.sticky-wrapper.is-sticky .site-navbar ul li a {
 		color: #000 !important; 
@@ -599,7 +599,7 @@ a {
 		color: #fff !important;
 	}
 	.sticky-wrapper.is-sticky .site-navbar ul li a.active {
-		color: #6EC1E4 !important; 
+		color: #489FB5 !important; 
 	}
   .sticky-wrapper .shrink {
     padding-top: 10px !important;
@@ -621,7 +621,8 @@ a {
       bottom: 0;
       right: 0;
       top: 0;
-      background: rgba(0, 0, 0, 0.2); }
+			/* background: rgba(0, 0, 0, 0.2);  */
+		}
   .site-blocks-cover .player {
     position: absolute;
     bottom: -250px;
@@ -775,7 +776,7 @@ a {
     font-weight: bold;
     color: #cccccc; }
     .site-block-tab .nav-item > a:hover, .site-block-tab .nav-item > a.active {
-      border-bottom: 2px solid #6EC1E4;
+      border-bottom: 2px solid #489FB5;
       color: #000; }
 
 .block-13, .slide-one-item {
@@ -861,7 +862,7 @@ a {
       border-radius: 50%;
       background: #dee2e6; }
     .slide-one-item .owl-dots .owl-dot.active span {
-      background: #6EC1E4; }
+      background: #489FB5; }
 
 .block-12 {
   position: relative; }
@@ -916,7 +917,7 @@ a {
         width: 80px;
         height: 4px;
         margin-top: -4px;
-        background: #6EC1E4;
+        background: #489FB5;
         top: 0; }
       .block-12 .text .text-inner .heading {
         font-size: 20px;
@@ -939,7 +940,7 @@ a {
     display: block;
     border-radius: 50%;
     opacity: 1;
-    color: #6EC1E4 !important; }
+    color: #489FB5 !important; }
     .block-16 figure .play-button:hover {
       opacity: 1; }
     .block-16 figure .play-button > span {
@@ -977,7 +978,7 @@ a {
   color: #999999; }
 
 .block-25 ul li a .meta {
-  color: #6EC1E4; }
+  color: #489FB5; }
 
 .block-25 ul li a:hover img {
   opacity: .5; }
@@ -1006,7 +1007,7 @@ a {
     position: absolute;
     width: 30px;
     height: 30px;
-    background: #6EC1E4;
+    background: #489FB5;
     border-radius: 50%;
     color: #fff; }
     .player .team-number > span {
@@ -1041,7 +1042,7 @@ a {
     border-radius: 50%;
     border: 1px solid #ccc; }
   .site-block-27 ul li.active a, .site-block-27 ul li.active span {
-    background: #6EC1E4;
+    background: #489FB5;
     color: #fff;
     border: 1px solid transparent; }
 
@@ -1121,7 +1122,7 @@ a {
 	z-index: 9; }
 
 .unit-4 .d-flex {
-	min-height: 180px;
+	min-height: 215px;
 }
 
 .unit-4 .unit-4-icon span {
@@ -1151,7 +1152,7 @@ a {
   margin-top: -100px; }
 
 .feature-1, .free-quote, .feature-3 {
-  background: #6EC1E4;
+  background: #489FB5;
   padding: 30px 50px;
   color: rgba(255, 255, 255, 0.6);
   font-size: 15px; }
@@ -1220,7 +1221,7 @@ a {
     bottom: 0;
     width: 80px;
     height: 3px;
-    background: #6EC1E4; }
+    background: #489FB5; }
   .border-primary.text-center:after {
     left: 50%;
     -webkit-transform: translateX(-50%);
@@ -1275,7 +1276,7 @@ a {
 .how-it-work-item .number {
   width: 50px;
   height: 50px;
-  background: #6EC1E4;
+  background: #489FB5;
   color: #fff;
   line-height: 55px;
   font-weight: 300;
@@ -1330,7 +1331,7 @@ a {
   line-height: 40px;
   border-radius: 50%;
   display: inline-block;
-  background: #6EC1E4;
+  background: #489FB5;
   color: #fff; }
 
 .custom-pagination span {
@@ -1389,7 +1390,7 @@ a {
     -o-transition: .1s all ease;
     transition: .1s all ease; }
   .popular-category:hover {
-    background: #6EC1E4;
+    background: #489FB5;
     -webkit-box-shadow: 0 5px 30px -5px rgba(232, 16, 80, 0.5);
     box-shadow: 0 5px 30px -5px rgba(232, 16, 80, 0.5); }
     .popular-category:hover .caption {
@@ -1440,7 +1441,7 @@ a {
       font-size: 12px;
       display: inline-block;
       padding: 5px 30px;
-      background: #6EC1E4;
+      background: #489FB5;
       border-radius: 30px;
       color: #fff;
       letter-spacing: .2em;
@@ -1473,12 +1474,12 @@ a {
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%); }
     .listing-item .bookmark:hover {
-      background: #6EC1E4; }
+      background: #489FB5; }
       .listing-item .bookmark:hover span {
         color: #fff; }
 
 .accordion-item[aria-expanded="true"] {
-  color: #6EC1E4; }
+  color: #489FB5; }
 
 .social-media {
   display: inline-block;
@@ -1511,7 +1512,7 @@ a {
     display: inline-block;
     width: 50px;
     height: 50px;
-    background: #6EC1E4;
+    background: #489FB5;
     margin-right: 1.5rem;
     border-radius: 50%;
     line-height: 50px;
@@ -1623,12 +1624,13 @@ a {
   display: none; }
 
 .section-sub-title {
-  font-size: 30px;
+	font-size: 30px;
+	font-weight: 600;
   color: #5E6164;
 }
 
 .section-title {
-  color: #6EC1E4;
+  color: #489FB5;
   font-size: 40px;
   font-weight: 900; }
   @media (max-width: 991.98px) {
@@ -1670,7 +1672,7 @@ a {
   position: relative; }
 
 .cta-big-image .img-box {
-  background: #6EC1E4;
+  background: #489FB5;
   max-width: 550px;
   padding: 3rem;
   position: absolute;
@@ -1722,7 +1724,7 @@ a {
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease;
-    background: #6EC1E4; }
+    background: #489FB5; }
     .team-member .social li {
       list-style: none; }
       .team-member .social li a {
@@ -1751,7 +1753,7 @@ a {
   padding: 20px;
   left: 50%;
   display: inline-block;
-  background: #6EC1E4; }
+  background: #489FB5; }
   .custom-direction a {
     text-decoration: none;
     color: #fff;
@@ -1868,10 +1870,26 @@ a {
 		margin-bottom: 10px;
 }
 
-.icon-primary {
-	color: #6EC1E4;
+.fa-primary {
+	color: #489FB5;
 }
 
 .fa-accent {
 	color: #FFA62B;
+}
+
+@media (min-width: 576px) {
+	.banner-content {
+		padding-top: 150px;
+	}
+}
+
+@media (min-width: 768px) {
+	.banner-content {
+		padding-top: 0;
+	}
+}
+
+#beneficts .row {
+	margin-bottom: 50px;
 }
