--- a/css/style.css
+++ b/css/style.css
@@ -1878,17 +1878,52 @@ a {
 	color: #FFA62B;
 }
 
-@media (min-width: 576px) {
-	.banner-content {
+/* @media (min-width: 576px) {
+	.banner {
+		background-image: url('../images/banner-mobil.jpg'); 
+		background-position: center; 
+		background-repeat: no-repeat; 
+		background-size: contain; 
+		background-color: #176879;
+	}
+	.banner.banner-content {
 		padding-top: 150px;
+	}
+} */
+
+.banner {
+	background-image: url('../images/banner-mobile.png'); 
+	background-position: bottom; 
+	background-repeat: no-repeat; 
+	background-size: contain; 
+	background-color: #176879;
+	min-height: max(100vh, 812px);
+}
+
+.banner .banner-content {
+	padding-top: 150px;
+	justify-content: center !important;
+	align-items: flex-start !important;
+	text-align: center;
+}
+
+@media (min-width: 992px) and (max-height: 1024px) {
+	.banner {
+		background-image: url('../images/banner.png'); 
+		background-position: center; 
+		background-repeat: no-repeat; 
+		background-size: contain; 
+		background-color: #176879;
+		min-height: 100vh;
+	}
+	.banner .banner-content {
+		padding-top: 0;
+		justify-content: left !important;
+		align-items: center !important;
+		text-align: left;
 	}
 }
 
-@media (min-width: 768px) {
-	.banner-content {
-		padding-top: 0;
-	}
-}
 
 #beneficts .row {
 	margin-bottom: 50px;
