change subtitle and popover wording and style

--- a/css/style.css
+++ b/css/style.css
@@ -1939,3 +1939,10 @@ a {
 #beneficts .row {
 	margin-bottom: 50px;
 }
+
+
+/* popover */
+.popover-header {
+	background-color: #176879;
+	color: white;
+}
