--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ body {
 	color: gray;
 	font-family: "Open Sans";
   font-weight: 400;
-  font-size: 1rem; }
+	font-size: 1rem; 
+}
 
 ::-moz-selection {
   background: #000;
@@ -20,10 +21,6 @@ a {
   transition: .3s all ease; }
   a:hover {
     text-decoration: none; }
-
-/* h1, h2, h3, h4, h5,
-.h1, .h2, .h3, .h4, .h5 {
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; } */
 
 .border-2 {
   border-width: 2px; }
@@ -134,8 +131,6 @@ a {
 
 .form-control {
   height: 43px;
-  /* border-radius: 30px; */
-	/* font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";  */
 }
   .form-control:active, .form-control:focus {
     border-color: #489FB5; }
@@ -284,7 +279,6 @@ a {
       left: 0;
       font-size: 20px;
       top: -.3rem;
-      font-family: "icomoon";
       content: "\e5ca";
       position: absolute; }
   .ul-check.white li:before {
@@ -357,8 +351,7 @@ a {
           right: 0;
           -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-          font-family: 'icomoon'; }
+          transform: translateY(-50%); }
       .site-navbar .site-navigation .site-menu .has-children .dropdown {
         visibility: hidden;
         opacity: 0;
@@ -525,7 +518,6 @@ a {
       .site-mobile-menu .site-nav-wrap .arrow-collapse:before {
         font-size: 12px;
         z-index: 20;
-        font-family: "icomoon";
         content: "\f078";
         position: absolute;
         top: 50%;
